# openfactory-demo

./: .ofaenv  README.md  pyproject.toml  setup.py
demo-factory/: uns_schema.yml
demo-factory/assembly/: dev_controller.yml
demo-factory/machining/WC001/: dev_dht_sensor.yml
demo-factory/machining/WC002/: dev_dht_sensor.yml
platform/: README.md
platform/docker/fanout/: docker-compose.yml
platform/docker/kafka/: create_topics.sh  docker-compose.yml
platform/docker/kafka/jmx-exporter/: README.md
platform/docker/opcua-connector/: docker-compose.yml
platform/scripts/: deploy_devices.sh  deploy_platform.sh  teardown_devices.sh  teardown_platform.sh
platform/scripts/virtual_devices/: deploy_virtual_devices.sh  teardown_virtual_devices.sh
