[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openfactory-demo"
version = "0.4.9"
description = "Single node OpenFactory demo"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
]

[tool.setuptools.packages.find]
where = ["."]
